# tui-pantry

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/tui-pantry-macros/: Cargo.toml  README.md
crates/tui-pantry-macros/src/: lib.rs
docs/features/harness/: 01_navigation.feature  02_layout_and_preview.feature  03_keyboard.feature  04_top_bar_navigation.feature
docs/features/styles/: 01_color_system.feature
examples/example-pantry/: Cargo.toml  pantry.toml
examples/example-pantry/examples/: widget_preview.rs
examples/example-pantry/src/: lib.rs
examples/example-pantry/src/panes/: activity_feed.rs  metric_panel.rs  mod.rs  resource_gauges.rs
examples/example-pantry/src/styles/: mod.rs  palette.rs  theme.rs
examples/example-pantry/src/views/: analytics.rs  dashboard.rs  explorer.rs  mod.rs  monitoring.rs
examples/example-pantry/src/widgets/: barchart.rs  block.rs  canvas.rs  chart.rs  empty_state.rs  gauge.rs  key_value.rs  line_gauge.rs  list.rs  log_stream.rs  logo.rs  mod.rs  paragraph.rs  scrollbar.rs  sparkline.rs  status_badge.rs  table.rs  tabs.rs  truncated_text.rs
scaffold/: main.rs  panes.rs  views.rs  widgets.rs
src/: app.rs  color_depth.rs  dump.rs  ingredient.rs  layout.rs  lib.rs  nav.rs  pane.rs  stylesheet.rs  swatch.rs  theme.rs  ui.rs
