[package]
name = "tui-pantry-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros for tui-pantry — not intended for direct use"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taho-inc/taho"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
toml = "0.9"
