[package]
name = "example-pantry"
description = "Ratatui stock widget showcase for tui-pantry"
publish = false
edition = { workspace = true }
version = { workspace = true }

[features]
pantry = []

[dependencies]
ratatui = { workspace = true }
tui-pantry = { workspace = true }

[[example]]
name = "widget_preview"
required-features = ["pantry"]

[lints]
workspace = true
